--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./favicon.svg"/>
+    <link rel="stylesheet" href="index.css" />
     <title>SanSu Messaging</title>
   </head>
-  <body>
+  <body className="container-flex">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
