--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css" />
     <title>SanSu Messaging</title>
   </head>
-  <body className="container-flex">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
